update old legacy endpoints and improve handling of detailed prompt requests
update old legacy endpoints to use new ContenFillers

add bloom and difficulty ratio
